--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,14 +3,18 @@
 * {
     margin: 0;
     font-family: 'Open Sans', 'san serif';
+
+}
+
+section {
+    margin-top: 130px;
 }
 
 .header {
     background: #FFF8F3;
     background-image: url(../images/header_bg.png), url(../images/developer.png);
     background-position: bottom right, left;
-    background-repeat: no-repeat;
-}
+    background-repeat: no-repeat;}
 
 /* header and navigation styles */
 nav {
@@ -45,6 +49,7 @@ nav li {
     border: none;
     background-color: #FD6E0A;
     padding: 18px 35px;
+    font-weight: 700;
 
 }
 
@@ -93,6 +98,7 @@ main {
     margin-bottom: 30px;
     font-size: 35px;
     font-weight: 600;
+    text-align: center;
 }
 
 .disc-sect {
@@ -127,3 +133,89 @@ main {
     color: #474747;
 
 }
+
+.wid {
+    margin-top: 130px;
+}
+
+.skills-container {
+    display: flex;
+    gap: 24px;
+}
+
+.skill {
+    background: #fff;
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.09);
+    border-radius: 5px;
+    padding: 30px;
+}
+
+.skill-title {
+    font-weight: 700;
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+.skill-disc {
+
+}
+
+/* Resume Styles */
+
+.resume-content {
+    display: flex;
+    gap: 24px;
+}
+
+.resume .title {
+    font-weight: 700;
+    font-size: 25px;
+    color: #474747;
+    margin-bottom: 10px;
+
+}
+.resume .sub-title {
+    font-weight: 600;
+    font-size: 20px;
+    color: #757575;
+    margin-bottom: 20px;
+    
+}
+.resume .disc {
+    color: #757575;
+    
+}
+
+.resume-item {
+     margin-top: 30px;
+     margin-bottom: 30px;
+}
+
+.resume-button {
+    margin-top: 50px;
+    text-align: center;
+}
+
+/* contant style */
+
+.contact {
+    display: flex;
+    gap: 100px;
+    background-color: #FFF8F3;
+    padding: 130px 200px;
+}
+
+ .contact .section-title {
+    text-align: left;
+ }
+
+ .contact input[type="text"], input[type="email"],  textarea {
+     margin-bottom: 24px;
+     border: none;
+     width: 100%;
+     padding: 18px 30px;
+ }
+
+ .contact a {
+    text-decoration: none;
+    margin:10px;
+ }
